include/spudgpu.h

typedef uint32_t SPUDGPU_FORMAT;
enum {
	SPUDGPU_FORMAT_UNKNOWN                    = 0,
	SPUDGPU_FORMAT_R32G32B32A32_TYPELESS      = 1,
	SPUDGPU_FORMAT_R32G32B32A32_FLOAT         = 2,
	SPUDGPU_FORMAT_R32G32B32A32_UINT          = 3,
	SPUDGPU_FORMAT_R32G32B32A32_SINT          = 4,
	SPUDGPU_FORMAT_R32G32B32_TYPELESS         = 5,
	SPUDGPU_FORMAT_R32G32B32_FLOAT            = 6,
	SPUDGPU_FORMAT_R32G32B32_UINT             = 7,
	SPUDGPU_FORMAT_R32G32B32_SINT             = 8,
	SPUDGPU_FORMAT_R16G16B16A16_TYPELESS      = 9,
	SPUDGPU_FORMAT_R16G16B16A16_FLOAT         = 10,
	SPUDGPU_FORMAT_R16G16B16A16_UNORM         = 11,
	SPUDGPU_FORMAT_R16G16B16A16_UINT          = 12,
	SPUDGPU_FORMAT_R16G16B16A16_SNORM         = 13,
	SPUDGPU_FORMAT_R16G16B16A16_SINT          = 14,
	SPUDGPU_FORMAT_R32G32_TYPELESS            = 15,
	SPUDGPU_FORMAT_R32G32_FLOAT               = 16,
	SPUDGPU_FORMAT_R32G32_UINT                = 17,
	SPUDGPU_FORMAT_R32G32_SINT                = 18,
	SPUDGPU_FORMAT_R32G8X24_TYPELESS          = 19,
	SPUDGPU_FORMAT_D32_FLOAT_S8X24_UINT       = 20,
	SPUDGPU_FORMAT_R32_FLOAT_X8X24_TYPELESS   = 21,
	SPUDGPU_FORMAT_X32_TYPELESS_G8X24_UINT    = 22,
	SPUDGPU_FORMAT_R10G10B10A2_TYPELESS       = 23,
	SPUDGPU_FORMAT_R10G10B10A2_UNORM          = 24,
	SPUDGPU_FORMAT_R10G10B10A2_UINT           = 25,
	SPUDGPU_FORMAT_R11G11B10_FLOAT            = 26,
	SPUDGPU_FORMAT_R8G8B8A8_TYPELESS          = 27,
	SPUDGPU_FORMAT_R8G8B8A8_UNORM             = 28,
	SPUDGPU_FORMAT_R8G8B8A8_UNORM_SRGB        = 29,
	SPUDGPU_FORMAT_R8G8B8A8_UINT              = 30,
	SPUDGPU_FORMAT_R8G8B8A8_SNORM             = 31,
	SPUDGPU_FORMAT_R8G8B8A8_SINT              = 32,
	SPUDGPU_FORMAT_R16G16_TYPELESS            = 33,
	SPUDGPU_FORMAT_R16G16_FLOAT               = 34,
	SPUDGPU_FORMAT_R16G16_UNORM               = 35,
	SPUDGPU_FORMAT_R16G16_UINT                = 36,
	SPUDGPU_FORMAT_R16G16_SNORM               = 37,
	SPUDGPU_FORMAT_R16G16_SINT                = 38,
	SPUDGPU_FORMAT_R32_TYPELESS               = 39,
	SPUDGPU_FORMAT_D32_FLOAT                  = 40,
	SPUDGPU_FORMAT_R32_FLOAT                  = 41,
	SPUDGPU_FORMAT_R32_UINT                   = 42,
	SPUDGPU_FORMAT_R32_SINT                   = 43,
	SPUDGPU_FORMAT_R24G8_TYPELESS             = 44,
	SPUDGPU_FORMAT_D24_UNORM_S8_UINT          = 45,
	SPUDGPU_FORMAT_R24_UNORM_X8_TYPELESS      = 46,
	SPUDGPU_FORMAT_X24_TYPELESS_G8_UINT       = 47,
	SPUDGPU_FORMAT_R8G8_TYPELESS              = 48,
	SPUDGPU_FORMAT_R8G8_UNORM                 = 49,
	SPUDGPU_FORMAT_R8G8_UINT                  = 50,
	SPUDGPU_FORMAT_R8G8_SNORM                 = 51,
	SPUDGPU_FORMAT_R8G8_SINT                  = 52,
	SPUDGPU_FORMAT_R16_TYPELESS               = 53,
	SPUDGPU_FORMAT_R16_FLOAT                  = 54,
	SPUDGPU_FORMAT_D16_UNORM                  = 55,
	SPUDGPU_FORMAT_R16_UNORM                  = 56,
	SPUDGPU_FORMAT_R16_UINT                   = 57,
	SPUDGPU_FORMAT_R16_SNORM                  = 58,
	SPUDGPU_FORMAT_R16_SINT                   = 59,
	SPUDGPU_FORMAT_R8_TYPELESS                = 60,
	SPUDGPU_FORMAT_R8_UNORM                   = 61,
	SPUDGPU_FORMAT_R8_UINT                    = 62,
	SPUDGPU_FORMAT_R8_SNORM                   = 63,
	SPUDGPU_FORMAT_R8_SINT                    = 64,
	SPUDGPU_FORMAT_A8_UNORM                   = 65,
	SPUDGPU_FORMAT_R1_UNORM                   = 66,
	SPUDGPU_FORMAT_R9G9B9E5_SHAREDEXP         = 67,
	SPUDGPU_FORMAT_R8G8_B8G8_UNORM            = 68,
	SPUDGPU_FORMAT_G8R8_G8B8_UNORM            = 69,
	SPUDGPU_FORMAT_BC1_TYPELESS               = 70,
	SPUDGPU_FORMAT_BC1_UNORM                  = 71,
	SPUDGPU_FORMAT_BC1_UNORM_SRGB             = 72,
	SPUDGPU_FORMAT_BC2_TYPELESS               = 73,
	SPUDGPU_FORMAT_BC2_UNORM                  = 74,
	SPUDGPU_FORMAT_BC2_UNORM_SRGB             = 75,
	SPUDGPU_FORMAT_BC3_TYPELESS               = 76,
	SPUDGPU_FORMAT_BC3_UNORM                  = 77,
	SPUDGPU_FORMAT_BC3_UNORM_SRGB             = 78,
	SPUDGPU_FORMAT_BC4_TYPELESS               = 79,
	SPUDGPU_FORMAT_BC4_UNORM                  = 80,
	SPUDGPU_FORMAT_BC4_SNORM                  = 81,
	SPUDGPU_FORMAT_BC5_TYPELESS               = 82,
	SPUDGPU_FORMAT_BC5_UNORM                  = 83,
	SPUDGPU_FORMAT_BC5_SNORM                  = 84,
	SPUDGPU_FORMAT_B5G6R5_UNORM               = 85,
	SPUDGPU_FORMAT_B5G5R5A1_UNORM             = 86,
	SPUDGPU_FORMAT_B8G8R8A8_UNORM             = 87,
	SPUDGPU_FORMAT_B8G8R8X8_UNORM             = 88,
	SPUDGPU_FORMAT_R10G10B10_XR_BIAS_A2_UNORM = 89,
	SPUDGPU_FORMAT_B8G8R8A8_TYPELESS          = 90,
	SPUDGPU_FORMAT_B8G8R8A8_UNORM_SRGB        = 91,
	SPUDGPU_FORMAT_B8G8R8X8_TYPELESS          = 92,
	SPUDGPU_FORMAT_B8G8R8X8_UNORM_SRGB        = 93,
	SPUDGPU_FORMAT_BC6H_TYPELESS              = 94,
	SPUDGPU_FORMAT_BC6H_UF16                  = 95,
	SPUDGPU_FORMAT_BC6H_SF16                  = 96,
	SPUDGPU_FORMAT_BC7_TYPELESS               = 97,
	SPUDGPU_FORMAT_BC7_UNORM                  = 98,
	SPUDGPU_FORMAT_BC7_UNORM_SRGB             = 99,
	SPUDGPU_FORMAT_AYUV                       = 100,
	SPUDGPU_FORMAT_Y410                       = 101,
	SPUDGPU_FORMAT_Y416                       = 102,
	SPUDGPU_FORMAT_NV12                       = 103,
	SPUDGPU_FORMAT_P010                       = 104,
	SPUDGPU_FORMAT_P016                       = 105,
	SPUDGPU_FORMAT_420_OPAQUE                 = 106,
	SPUDGPU_FORMAT_YUY2                       = 107,
	SPUDGPU_FORMAT_Y210                       = 108,
	SPUDGPU_FORMAT_Y216                       = 109,
	SPUDGPU_FORMAT_NV11                       = 110,
	SPUDGPU_FORMAT_AI44                       = 111,
	SPUDGPU_FORMAT_IA44                       = 112,
	SPUDGPU_FORMAT_P8                         = 113,
	SPUDGPU_FORMAT_A8P8                       = 114,
	SPUDGPU_FORMAT_B4G4R4A4_UNORM             = 115,
	SPUDGPU_FORMAT_P208 = 130,
	SPUDGPU_FORMAT_V208 = 131,
	SPUDGPU_FORMAT_V408 = 132,
	SPUDGPU_FORMAT_FORCE_UINT = -1 
};
typedef struct spudgpu_instance_t *spudgpu_instance;
typedef struct spudgpu_device_t *spudgpu_device;
typedef struct spudgpu_buffer_t *spudgpu_buffer;
typedef struct spudgpu_buffer_view_t *spudgpu_buffer_view;
typedef struct spudgpu_image_t *spudgpu_image;
typedef struct spudgpu_image_view_t *spudgpu_image_view;
typedef struct spudgpu_shader_pipeline_t *spudgpu_shader_pipeline;
typedef struct spudgpu_command_list_t *spudgpu_command_list;
typedef struct spudgpu_command_queue_t *spudgpu_command_queue;
typedef struct spudgpu_swap_chain_t *spudgpu_swap_chain;
typedef uint32_t SPUDGPU_NATIVE_API;
enum {
	SPUDGPU_NATIVE_API_NONE = 0,
	SPUDGPU_NATIVE_API_VULKAN = 1,
	SPUDGPU_NATIVE_API_D3D12 = 2,
	SPUDGPU_NATIVE_API_METAL = 3
};
typedef uint32_t SPUDGPU_MEMORY_FLAGS;