src/gpu/backends/vulkan/spudgpuvulkan.h

typedef struct spudgpu_instance_t {
#if _DEBUG
    const char *_debug_name;
#endif
    VkInstance _instance_vk;
    uint64_t *_devices_pointer_array;
    uint32_t _devices_count;
} spudgpu_instance_vulkan;
typedef struct spudgpu_bindless_state_vulkan {
    spudgpu_descriptor_set_layout layout; 
    VkDescriptorPool pool_vk;
    VkDescriptorSet set_vk;
    uint32_t sampled_image_next_unused;
    uint32_t storage_image_next_unused;
    uint32_t storage_buffer_next_unused;
    uint32_t sampled_image_free_stack[SPUDGPU_BINDLESS_MAX_SLOTS_PER_CLASS];
    uint32_t sampled_image_free_count;
    uint32_t storage_image_free_stack[SPUDGPU_BINDLESS_MAX_SLOTS_PER_CLASS];
    uint32_t storage_image_free_count;
    uint32_t storage_buffer_free_stack[SPUDGPU_BINDLESS_MAX_SLOTS_PER_CLASS];
    uint32_t storage_buffer_free_count;
} spudgpu_bindless_state_vulkan;
typedef struct spudgpu_device_t {
#if _DEBUG
    const char *_debug_name;
#endif
    VkDevice _logical_device_vk;
    VkPhysicalDevice _physical_device_vk;
    spudgpu_instance_vulkan _instance;
    SPUDGPU_DEVICE_PROPERTIES _properties;
    VkPhysicalDeviceProperties _properties_vk;
    VkPhysicalDeviceFeatures _features_vk;
    uint32_t _graphics_queue_family_index;
    bool _mesh_shading_supported;
    uint32_t _mesh_shading_max_output_vertices;
    uint32_t _mesh_shading_max_output_primitives;
    uint32_t _mesh_shading_max_workgroup_invocations;
    PFN_vkCmdDrawMeshTasksEXT _vkCmdDrawMeshTasksEXT;
    spudgpu_bindless_state_vulkan *_bindless;
} spudgpu_device_vulkan;
typedef struct spudgpu_command_queue_t {
#if _DEBUG
    const char *_debug_name;
#endif
    VkQueue _queue_vk;
    uint32_t _queue_family_index;
} spudgpu_command_queue_vulkan;
typedef struct spudgpu_command_allocator_t {
#if _DEBUG
    const char *_debug_name;
#endif
    VkCommandPool _command_pool_vk;
    spudgpu_device_vulkan _device;
    uint32_t _queue_family_index;
} spudgpu_command_allocator_vulkan;
typedef struct spudgpu_command_list_t {
#if _DEBUG
    const char *_debug_name;
#endif
    VkCommandBuffer _command_buffer_vk;
    spudgpu_command_allocator_vulkan _allocator;
    bool _rendering_active;
    VkImageView _bound_color_attachments[SPUDGPU_MAX_COLOR_ATTACHMENTS];
    uint32_t _bound_color_attachment_count;
    VkImageView _bound_depth_attachment_view; 
} spudgpu_command_list_vulkan;
typedef struct spudgpu_buffer_t {
#if _DEBUG
    const char *_debug_name;
#endif
    VkBuffer _buffer_vk;
    VkDeviceMemory _memory_vk;
    spudgpu_buffer_desc _desc;
    spudgpu_device_vulkan _device;
} spudgpu_buffer_vulkan;
typedef struct spudgpu_buffer_view_t {
#if _DEBUG
    const char *_debug_name;
#endif
    VkBufferView _buffer_view_vk;
    spudgpu_buffer_view_desc _desc;
} spudgpu_buffer_view_vulkan;
typedef struct spudgpu_image_t {
#if _DEBUG
    const char *_debug_name;
#endif
    VkImage _image_vk;
    VkDeviceMemory _memory_vk;
    VkFormat _format_vk;
    spudgpu_image_desc _desc;
    spudgpu_device_vulkan _device;
} spudgpu_image_vulkan;
typedef struct spudgpu_image_view_t {
#if _DEBUG
    const char *_debug_name;
#endif
    VkImageView _image_view_vk;
    spudgpu_image_view_desc _desc;
} spudgpu_image_view_vulkan;
typedef struct spudgpu_fence_t {
#if _DEBUG
    const char *_debug_name;
#endif
    VkFence _fence_vk;
    VkDevice _device_vk;
} spudgpu_fence_vulkan;
typedef struct spudgpu_semaphore_t {
#if _DEBUG
    const char *_debug_name;
#endif
    VkSemaphore _semaphore_vk;
    VkDevice _device_vk;
} spudgpu_semaphore_vulkan;
typedef struct spudgpu_swap_chain_t {
#if _DEBUG
    const char *_debug_name;
#endif
    VkSwapchainKHR _swapchain_vk;
    spudgpu_swap_chain_desc _desc;
    spudgpu_device_vulkan _device;
    VkQueue _present_queue_vk; 
    VkSurfaceKHR _surface_vk;
    VkFormat _format_vk;
    VkExtent2D _extent_vk;
    VkImage *_swapchain_images_vk;
    uint32_t _swapchain_images_count;
    spudgpu_image_view_vulkan *_swapchain_image_views_vk;
    uint32_t _swapchain_image_views_count;
    spudgpu_semaphore_vulkan *_image_available_semaphores; 
    spudgpu_semaphore_vulkan *_render_finished_semaphores; 
    spudgpu_fence_vulkan     *_in_flight_fences;           
    uint32_t _max_frames_in_flight;
    uint32_t _current_frame; 
    uint32_t _current_image_index; 
} spudgpu_swap_chain_vulkan;
typedef struct spudgpu_shader_pipeline_t {
#if _DEBUG
    const char *_debug_name;
#endif
    VkPipeline _pipeline_vk;
    VkPipelineLayout _pipeline_layout_vk;
    spudgpu_device_vulkan _device;
    spudgpu_shader_pipeline_desc _desc;
} spudgpu_shader_pipeline_vulkan;