bindings/rust/spudlib-sys/src/bindings.rs

//! Auto-generated FFI bindings for spudgpu.h
//! Re-generate with: bindgen spudgpu.h -o bindings.rs -- -DSPUDGPU_COMPILE_VULKAN_API=1
#![allow(non_upper_case_globals)]
#![allow(non_camel_case_types)]
#![allow(non_snake_case)]
#![allow(dead_code)]

use std::ffi::c_void;
use std::os::raw::{c_char, c_float};

// ----------------------------------------------------------------
// Opaque handle types
// Each spudgpu_foo is a *mut pointer to an opaque C struct.
// Users never construct these — only SpudGPU creates and destroys them.
// ----------------------------------------------------------------

#[repr(C)]
pub struct spudgpu_instance_t {
    _private: [u8; 0],
}
pub type spudgpu_instance = *mut spudgpu_instance_t;

#[repr(C)]
pub struct spudgpu_device_t {
    _private: [u8; 0],
}
pub type spudgpu_device = *mut spudgpu_device_t;

#[repr(C)]
pub struct spudgpu_resource_pool_t {
    _private: [u8; 0],
}
pub type spudgpu_resource_pool = *mut spudgpu_resource_pool_t;

#[repr(C)]
pub struct spudgpu_buffer_t {
    _private: [u8; 0],
}
pub type spudgpu_buffer = *mut spudgpu_buffer_t;

#[repr(C)]
pub struct spudgpu_buffer_view_t {
    _private: [u8; 0],
}
pub type spudgpu_buffer_view = *mut spudgpu_buffer_view_t;

#[repr(C)]
pub struct spudgpu_image_t {
    _private: [u8; 0],
}
pub type spudgpu_image = *mut spudgpu_image_t;

#[repr(C)]
pub struct spudgpu_image_view_t {
    _private: [u8; 0],
}
pub type spudgpu_image_view = *mut spudgpu_image_view_t;

#[repr(C)]
pub struct spudgpu_shader_pipeline_t {
    _private: [u8; 0],
}
pub type spudgpu_shader_pipeline = *mut spudgpu_shader_pipeline_t;

#[repr(C)]
pub struct spudgpu_command_list_t {
    _private: [u8; 0],
}
pub type spudgpu_command_list = *mut spudgpu_command_list_t;

#[repr(C)]
pub struct spudgpu_command_queue_t {
    _private: [u8; 0],
}
pub type spudgpu_command_queue = *mut spudgpu_command_queue_t;

#[repr(C)]
pub struct spudgpu_swap_chain_t {
    _private: [u8; 0],
}
pub type spudgpu_swap_chain = *mut spudgpu_swap_chain_t;

// ----------------------------------------------------------------
// SPUDGPU_FORMAT  (mirrors the enum in spudgpu.h)
// ----------------------------------------------------------------

pub type SPUDGPU_FORMAT = u32;

pub const SPUDGPU_FORMAT_UNKNOWN: SPUDGPU_FORMAT                     = 0;
pub const SPUDGPU_FORMAT_R32G32B32A32_TYPELESS: SPUDGPU_FORMAT       = 1;
pub const SPUDGPU_FORMAT_R32G32B32A32_FLOAT: SPUDGPU_FORMAT          = 2;
pub const SPUDGPU_FORMAT_R32G32B32A32_UINT: SPUDGPU_FORMAT           = 3;
pub const SPUDGPU_FORMAT_R32G32B32A32_SINT: SPUDGPU_FORMAT           = 4;
pub const SPUDGPU_FORMAT_R32G32B32_TYPELESS: SPUDGPU_FORMAT          = 5;
pub const SPUDGPU_FORMAT_R32G32B32_FLOAT: SPUDGPU_FORMAT             = 6;
pub const SPUDGPU_FORMAT_R32G32B32_UINT: SPUDGPU_FORMAT              = 7;
pub const SPUDGPU_FORMAT_R32G32B32_SINT: SPUDGPU_FORMAT              = 8;
pub const SPUDGPU_FORMAT_R16G16B16A16_TYPELESS: SPUDGPU_FORMAT       = 9;
pub const SPUDGPU_FORMAT_R16G16B16A16_FLOAT: SPUDGPU_FORMAT          = 10;
pub const SPUDGPU_FORMAT_R16G16B16A16_UNORM: SPUDGPU_FORMAT          = 11;
pub const SPUDGPU_FORMAT_R16G16B16A16_UINT: SPUDGPU_FORMAT           = 12;
pub const SPUDGPU_FORMAT_R16G16B16A16_SNORM: SPUDGPU_FORMAT          = 13;
pub const SPUDGPU_FORMAT_R16G16B16A16_SINT: SPUDGPU_FORMAT           = 14;
pub const SPUDGPU_FORMAT_R32G32_TYPELESS: SPUDGPU_FORMAT             = 15;
pub const SPUDGPU_FORMAT_R32G32_FLOAT: SPUDGPU_FORMAT                = 16;
pub const SPUDGPU_FORMAT_R32G32_UINT: SPUDGPU_FORMAT                 = 17;
pub const SPUDGPU_FORMAT_R32G32_SINT: SPUDGPU_FORMAT                 = 18;
pub const SPUDGPU_FORMAT_R32G8X24_TYPELESS: SPUDGPU_FORMAT           = 19;
pub const SPUDGPU_FORMAT_D32_FLOAT_S8X24_UINT: SPUDGPU_FORMAT        = 20;
pub const SPUDGPU_FORMAT_R32_FLOAT_X8X24_TYPELESS: SPUDGPU_FORMAT    = 21;
pub const SPUDGPU_FORMAT_X32_TYPELESS_G8X24_UINT: SPUDGPU_FORMAT     = 22;
pub const SPUDGPU_FORMAT_R10G10B10A2_TYPELESS: SPUDGPU_FORMAT        = 23;
pub const SPUDGPU_FORMAT_R10G10B10A2_UNORM: SPUDGPU_FORMAT           = 24;
pub const SPUDGPU_FORMAT_R10G10B10A2_UINT: SPUDGPU_FORMAT            = 25;
pub const SPUDGPU_FORMAT_R11G11B10_FLOAT: SPUDGPU_FORMAT             = 26;
pub const SPUDGPU_FORMAT_R8G8B8A8_TYPELESS: SPUDGPU_FORMAT           = 27;
pub const SPUDGPU_FORMAT_R8G8B8A8_UNORM: SPUDGPU_FORMAT              = 28;
pub const SPUDGPU_FORMAT_R8G8B8A8_UNORM_SRGB: SPUDGPU_FORMAT         = 29;
pub const SPUDGPU_FORMAT_R8G8B8A8_UINT: SPUDGPU_FORMAT               = 30;
pub const SPUDGPU_FORMAT_R8G8B8A8_SNORM: SPUDGPU_FORMAT              = 31;
pub const SPUDGPU_FORMAT_R8G8B8A8_SINT: SPUDGPU_FORMAT               = 32;
pub const SPUDGPU_FORMAT_R16G16_TYPELESS: SPUDGPU_FORMAT             = 33;
pub const SPUDGPU_FORMAT_R16G16_FLOAT: SPUDGPU_FORMAT                = 34;
pub const SPUDGPU_FORMAT_R16G16_UNORM: SPUDGPU_FORMAT                = 35;
pub const SPUDGPU_FORMAT_R16G16_UINT: SPUDGPU_FORMAT                 = 36;
pub const SPUDGPU_FORMAT_R16G16_SNORM: SPUDGPU_FORMAT                = 37;
pub const SPUDGPU_FORMAT_R16G16_SINT: SPUDGPU_FORMAT                 = 38;
pub const SPUDGPU_FORMAT_R32_TYPELESS: SPUDGPU_FORMAT                = 39;
pub const SPUDGPU_FORMAT_D32_FLOAT: SPUDGPU_FORMAT                   = 40;
pub const SPUDGPU_FORMAT_R32_FLOAT: SPUDGPU_FORMAT                   = 41;
pub const SPUDGPU_FORMAT_R32_UINT: SPUDGPU_FORMAT                    = 42;
pub const SPUDGPU_FORMAT_R32_SINT: SPUDGPU_FORMAT                    = 43;
pub const SPUDGPU_FORMAT_R24G8_TYPELESS: SPUDGPU_FORMAT              = 44;
pub const SPUDGPU_FORMAT_D24_UNORM_S8_UINT: SPUDGPU_FORMAT           = 45;
pub const SPUDGPU_FORMAT_R24_UNORM_X8_TYPELESS: SPUDGPU_FORMAT       = 46;
pub const SPUDGPU_FORMAT_X24_TYPELESS_G8_UINT: SPUDGPU_FORMAT        = 47;
pub const SPUDGPU_FORMAT_R8G8_TYPELESS: SPUDGPU_FORMAT               = 48;
pub const SPUDGPU_FORMAT_R8G8_UNORM: SPUDGPU_FORMAT                  = 49;
pub const SPUDGPU_FORMAT_R8G8_UINT: SPUDGPU_FORMAT                   = 50;
pub const SPUDGPU_FORMAT_R8G8_SNORM: SPUDGPU_FORMAT                  = 51;
pub const SPUDGPU_FORMAT_R8G8_SINT: SPUDGPU_FORMAT                   = 52;
pub const SPUDGPU_FORMAT_R16_TYPELESS: SPUDGPU_FORMAT                = 53;
pub const SPUDGPU_FORMAT_R16_FLOAT: SPUDGPU_FORMAT                   = 54;
pub const SPUDGPU_FORMAT_D16_UNORM: SPUDGPU_FORMAT                   = 55;
pub const SPUDGPU_FORMAT_R16_UNORM: SPUDGPU_FORMAT                   = 56;
pub const SPUDGPU_FORMAT_R16_UINT: SPUDGPU_FORMAT                    = 57;
pub const SPUDGPU_FORMAT_R16_SNORM: SPUDGPU_FORMAT                   = 58;
pub const SPUDGPU_FORMAT_R16_SINT: SPUDGPU_FORMAT                    = 59;
pub const SPUDGPU_FORMAT_R8_TYPELESS: SPUDGPU_FORMAT                 = 60;
pub const SPUDGPU_FORMAT_R8_UNORM: SPUDGPU_FORMAT                    = 61;
pub const SPUDGPU_FORMAT_R8_UINT: SPUDGPU_FORMAT                     = 62;
pub const SPUDGPU_FORMAT_R8_SNORM: SPUDGPU_FORMAT                    = 63;
pub const SPUDGPU_FORMAT_R8_SINT: SPUDGPU_FORMAT                     = 64;
pub const SPUDGPU_FORMAT_A8_UNORM: SPUDGPU_FORMAT                    = 65;
pub const SPUDGPU_FORMAT_R1_UNORM: SPUDGPU_FORMAT                    = 66;
pub const SPUDGPU_FORMAT_R9G9B9E5_SHAREDEXP: SPUDGPU_FORMAT          = 67;
pub const SPUDGPU_FORMAT_R8G8_B8G8_UNORM: SPUDGPU_FORMAT             = 68;
pub const SPUDGPU_FORMAT_G8R8_G8B8_UNORM: SPUDGPU_FORMAT             = 69;
pub const SPUDGPU_FORMAT_BC1_TYPELESS: SPUDGPU_FORMAT                = 70;
pub const SPUDGPU_FORMAT_BC1_UNORM: SPUDGPU_FORMAT                   = 71;
pub const SPUDGPU_FORMAT_BC1_UNORM_SRGB: SPUDGPU_FORMAT              = 72;
pub const SPUDGPU_FORMAT_BC2_TYPELESS: SPUDGPU_FORMAT                = 73;
pub const SPUDGPU_FORMAT_BC2_UNORM: SPUDGPU_FORMAT                   = 74;
pub const SPUDGPU_FORMAT_BC2_UNORM_SRGB: SPUDGPU_FORMAT              = 75;
pub const SPUDGPU_FORMAT_BC3_TYPELESS: SPUDGPU_FORMAT                = 76;
pub const SPUDGPU_FORMAT_BC3_UNORM: SPUDGPU_FORMAT                   = 77;
pub const SPUDGPU_FORMAT_BC3_UNORM_SRGB: SPUDGPU_FORMAT              = 78;
pub const SPUDGPU_FORMAT_BC4_TYPELESS: SPUDGPU_FORMAT                = 79;
pub const SPUDGPU_FORMAT_BC4_UNORM: SPUDGPU_FORMAT                   = 80;
pub const SPUDGPU_FORMAT_BC4_SNORM: SPUDGPU_FORMAT                   = 81;
pub const SPUDGPU_FORMAT_BC5_TYPELESS: SPUDGPU_FORMAT                = 82;
pub const SPUDGPU_FORMAT_BC5_UNORM: SPUDGPU_FORMAT                   = 83;
pub const SPUDGPU_FORMAT_BC5_SNORM: SPUDGPU_FORMAT                   = 84;
pub const SPUDGPU_FORMAT_B5G6R5_UNORM: SPUDGPU_FORMAT                = 85;
pub const SPUDGPU_FORMAT_B5G5R5A1_UNORM: SPUDGPU_FORMAT              = 86;
pub const SPUDGPU_FORMAT_B8G8R8A8_UNORM: SPUDGPU_FORMAT              = 87;
pub const SPUDGPU_FORMAT_B8G8R8X8_UNORM: SPUDGPU_FORMAT              = 88;
pub const SPUDGPU_FORMAT_R10G10B10_XR_BIAS_A2_UNORM: SPUDGPU_FORMAT  = 89;
pub const SPUDGPU_FORMAT_B8G8R8A8_TYPELESS: SPUDGPU_FORMAT           = 90;
pub const SPUDGPU_FORMAT_B8G8R8A8_UNORM_SRGB: SPUDGPU_FORMAT         = 91;
pub const SPUDGPU_FORMAT_B8G8R8X8_TYPELESS: SPUDGPU_FORMAT           = 92;
pub const SPUDGPU_FORMAT_B8G8R8X8_UNORM_SRGB: SPUDGPU_FORMAT         = 93;
pub const SPUDGPU_FORMAT_BC6H_TYPELESS: SPUDGPU_FORMAT               = 94;
pub const SPUDGPU_FORMAT_BC6H_UF16: SPUDGPU_FORMAT                   = 95;
pub const SPUDGPU_FORMAT_BC6H_SF16: SPUDGPU_FORMAT                   = 96;
pub const SPUDGPU_FORMAT_BC7_TYPELESS: SPUDGPU_FORMAT                = 97;
pub const SPUDGPU_FORMAT_BC7_UNORM: SPUDGPU_FORMAT                   = 98;
pub const SPUDGPU_FORMAT_BC7_UNORM_SRGB: SPUDGPU_FORMAT              = 99;
pub const SPUDGPU_FORMAT_AYUV: SPUDGPU_FORMAT                        = 100;
pub const SPUDGPU_FORMAT_Y410: SPUDGPU_FORMAT                        = 101;
pub const SPUDGPU_FORMAT_Y416: SPUDGPU_FORMAT                        = 102;
pub const SPUDGPU_FORMAT_NV12: SPUDGPU_FORMAT                        = 103;
pub const SPUDGPU_FORMAT_P010: SPUDGPU_FORMAT                        = 104;
pub const SPUDGPU_FORMAT_P016: SPUDGPU_FORMAT                        = 105;
pub const SPUDGPU_FORMAT_420_OPAQUE: SPUDGPU_FORMAT                  = 106;
pub const SPUDGPU_FORMAT_YUY2: SPUDGPU_FORMAT                        = 107;
pub const SPUDGPU_FORMAT_Y210: SPUDGPU_FORMAT                        = 108;
pub const SPUDGPU_FORMAT_Y216: SPUDGPU_FORMAT                        = 109;
pub const SPUDGPU_FORMAT_NV11: SPUDGPU_FORMAT                        = 110;
pub const SPUDGPU_FORMAT_AI44: SPUDGPU_FORMAT                        = 111;
pub const SPUDGPU_FORMAT_IA44: SPUDGPU_FORMAT                        = 112;
pub const SPUDGPU_FORMAT_P8: SPUDGPU_FORMAT                          = 113;
pub const SPUDGPU_FORMAT_A8P8: SPUDGPU_FORMAT                        = 114;
pub const SPUDGPU_FORMAT_B4G4R4A4_UNORM: SPUDGPU_FORMAT              = 115;
pub const SPUDGPU_FORMAT_P208: SPUDGPU_FORMAT                        = 130;
pub const SPUDGPU_FORMAT_V208: SPUDGPU_FORMAT                        = 131;
pub const SPUDGPU_FORMAT_V408: SPUDGPU_FORMAT                        = 132;

// ----------------------------------------------------------------
// SPUDGPU_NATIVE_API
// ----------------------------------------------------------------

pub type SPUDGPU_NATIVE_API = u32;
pub const SPUDGPU_NATIVE_API_NONE: SPUDGPU_NATIVE_API   = 0;
pub const SPUDGPU_NATIVE_API_VULKAN: SPUDGPU_NATIVE_API = 1;
pub const SPUDGPU_NATIVE_API_METAL: SPUDGPU_NATIVE_API  = 2;

// ----------------------------------------------------------------
// SPUDGPU_MEMORY_FLAGS
// ----------------------------------------------------------------
